fixes z-index for circle animation, adds timeline markup and css

--- a/2015/less/less.main.less
+++ b/2015/less/less.main.less
@@ -1,6 +1,6 @@
 @font-stack: Helvetica, sans-serif;
 @primary-color: rgba(0, 0, 0, 0.75);
-@secondaty-color: ghostwhite;
+@secondary-color: ghostwhite;
 @cfd-blue: rgba(159, 27, 3, 0);
 @cfd-red: #E24E54;
 @gray: rgba(100, 100, 100, 1.0);
@@ -22,11 +22,11 @@ body {
 }
 
 .logo {
-  margin-right:10px;
+  margin-right: 10px;
 }
 
 .banner {
-  color: @secondaty-color;
+  color: @secondary-color;
   background-color: @primary-color;
   background-size: cover;
   position: fixed;
@@ -38,14 +38,14 @@ body {
 }
 
 .part-one {
-  color: @secondaty-color;
-  background-image:url("../images/2.png");
+  color: @secondary-color;
+  background-image: url("../images/2.png");
   background-size: cover;
   background-position: center;
 }
 
 .part-two {
-  color: @secondaty-color;
+  color: @secondary-color;
 }
 
 .part-three {
@@ -53,11 +53,11 @@ body {
 }
 
 .part-four {
-  color: @secondaty-color;
+  color: @secondary-color;
 }
 
 .part-five {
-      background-color: @primary-color;
+  background-color: @primary-color;
 }
 
 h1 {
@@ -82,7 +82,7 @@ h4 {
 }
 
 p.lead {
-  color: @secondaty-color;
+  color: @secondary-color;
   padding: 0.25em;
   font-size: 3rem;
 }
@@ -100,16 +100,17 @@ p.lead {
 }
 
 .img-full {
-    width: 100%;
+  width: 100%;
 }
 
 // CSS SHAPES
 
 @circle-width: 50px;
+@timeline-color: @secondary-color;
 
 #circle {
   float: none;
-  margin: 0px auto;
+  margin: 188px auto -210px;
   z-index: 1;
   width: 50px;
   height: 50px;
@@ -117,4 +118,113 @@ p.lead {
   -moz-border-radius: @circle-width;
   -webkit-border-radius: @circle-width;
   border-radius: @circle-width;
+}
+
+.timeline {
+  ol {
+    position: relative;
+    display: block;
+    margin: 100px;
+    height: 4px;
+    background: @timeline-color;
+  }
+
+  ol::before,
+  ol::after {
+    content: "";
+    position: absolute;
+    top: -8px;
+    display: block;
+    width: 0;
+    height: 0;
+    border-radius: 10px;
+    border: 10px solid @timeline-color;
+  }
+
+  ol::before {
+    left: -5px;
+  }
+
+  ol::after {
+    right: -10px;
+    border: 10px solid transparent;
+    border-right: 0;
+    border-left: 20px solid @timeline-color;
+    border-radius: 3px;
+  }
+
+  /* ---- Timeline ---- */
+
+  li {
+    position: relative;
+    top: -77px;
+    display: inline-block;
+    float: left;
+    width: 150px;
+    transform: rotate(-45deg);
+    font: bold 14px arial;
+  }
+
+  li::before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: -29px;
+    display: block;
+    width: 6px;
+    height: 6px;
+    border: 4px solid @timeline-color;
+    border-radius: 10px;
+    background: #eee;
+  }
+
+  /* ---- Details ---- */
+
+  .details {
+    display: none;
+    position: absolute;
+    left: -85px;
+    top: 60px;
+    padding: 15px;
+    border-radius: 3px;
+    border-right: 2px solid rgba(0, 0, 0, .1);
+    border-bottom: 2px solid rgba(0, 0, 0, .1);
+    transform: rotate(45deg);
+    font: 12px arial;
+    background: #fff;
+  }
+
+  .details::before {
+    content: "";
+    position: absolute;
+    left: 10px;
+    top: -9px;
+    display: block;
+    width: 0;
+    height: 0;
+    border: 10px solid transparent;
+    border-bottom-color: #fff;
+    border-top: 0;
+  }
+
+  /* ---- Hover effects ---- */
+
+  li:hover {
+    cursor: pointer;
+    color: @secondary-color;
+  }
+
+  li:hover::before {
+    top: 1px;
+    left: -31px;
+    width: 8px;
+    height: 8px;
+    border-width: 5px;
+    border-color: @cfd-red;
+  }
+
+  li:hover .details {
+    display: block;
+    color: #444;
+  }
 }
